some minor changes

--- a/assets/index-original.less
+++ b/assets/index-original.less
@@ -18,7 +18,7 @@
 .@{menuPrefixCls} {
    outline: none;
    margin-bottom: 0;
-   // padding-left: 0; // Override default ul/ol
+   padding-left: 0; // Override default ul/ol
    list-style: none;
    border: 1px solid #d9d9d9;
    box-shadow: 0 0 4px #d9d9d9;
@@ -80,7 +80,7 @@
       margin: 0;
       position: relative;
       display: block;
-      // padding: 7px 7px 7px 16px;
+      padding: 7px 7px 7px 16px;
       white-space: nowrap;
 
       // Disabled state sets text to gray and nukes hover/tab effects
@@ -103,7 +103,7 @@
          position: absolute;
 
          .submenu-title-wrapper {
-            // padding-right: 20px;
+            padding-right: 20px;
          }
       }
       > .@{menuPrefixCls} {
@@ -116,7 +116,7 @@
       .anticon {
          width: 14px;
          height: 14px;
-         // margin-right: 8px;
+         margin-right: 8px;
          top: -1px;
       }
    }
@@ -162,7 +162,7 @@
       padding: 12px 0;
       & > .@{menuPrefixCls}-item,
       & > .@{menuPrefixCls}-submenu > .@{menuPrefixCls}-submenu-title {
-         // padding: 12px 8px 12px 24px;
+         padding: 12px 8px 12px 24px;
       }
       .@{menuPrefixCls}-submenu-arrow {
          display: inline-block;
@@ -173,10 +173,10 @@
          text-transform: none;
          text-rendering: auto;
          position: absolute;
-         // right: 16px;
+         right: 16px;
          line-height: 1.5em;
          &:before {
-            // content: "\f0da";
+            content: "\f0da";
          }
       }
    }
@@ -208,7 +208,7 @@
       & > .@{menuPrefixCls}-submenu > .@{menuPrefixCls}-submenu-title {
          padding-top: 8px;
          padding-bottom: 8px;
-         // padding-right: 0;
+         padding-right: 0;
       }
    }
 
