--- a/common.css
+++ b/common.css
@@ -1,14 +1,13 @@
 @font-face {
-  font-family: 'FontAwesome';
-  src: url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/fonts/fontawesome-webfont.eot');
-  src: url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/fonts/fontawesome-webfont.eot?#iefix') format('embedded-opentype'), url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/fonts/fontawesome-webfont.woff') format('woff'), url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/fonts/fontawesome-webfont.ttf') format('truetype'), url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/fonts/fontawesome-webfont.svg?#fontawesomeregular') format('svg');
+  font-family: "FontAwesome";
+  src: url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/fonts/fontawesome-webfont.eot");
+  src: url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/fonts/fontawesome-webfont.eot?#iefix") format("embedded-opentype"), url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/fonts/fontawesome-webfont.woff") format("woff"), url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/fonts/fontawesome-webfont.ttf") format("truetype"), url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.2.0/fonts/fontawesome-webfont.svg?#fontawesomeregular") format("svg");
   font-weight: normal;
   font-style: normal;
 }
 .rc-menu {
   outline: none;
   margin-bottom: 0;
-  padding-left: 0;
   list-style: none;
   border: 1px solid #d9d9d9;
   box-shadow: 0 0 4px #d9d9d9;
@@ -60,7 +59,6 @@
   margin: 0;
   position: relative;
   display: block;
-  padding: 7px 7px 7px 16px;
   white-space: nowrap;
 }
 .rc-menu-item.rc-menu-item-disabled,
@@ -80,9 +78,6 @@
 .rc-menu-submenu-popup {
   position: absolute;
 }
-.rc-menu-submenu-popup .submenu-title-wrapper {
-  padding-right: 20px;
-}
 .rc-menu-submenu > .rc-menu {
   background-color: #fff;
 }
@@ -90,11 +85,10 @@
 .rc-menu .rc-menu-item .anticon {
   width: 14px;
   height: 14px;
-  margin-right: 8px;
   top: -1px;
 }
 .rc-menu-horizontal {
-  background-color: #F3F5F7;
+  background-color: #f3f5f7;
   border: none;
   border-bottom: 1px solid #d9d9d9;
   box-shadow: none;
@@ -114,7 +108,7 @@
 .rc-menu-horizontal > .rc-menu-submenu-active,
 .rc-menu-horizontal > .rc-menu-item-active {
   border-bottom: 2px solid #2db7f5;
-  background-color: #F3F5F7;
+  background-color: #f3f5f7;
   color: #2baee9;
 }
 .rc-menu-horizontal:after {
@@ -129,16 +123,6 @@
 .rc-menu-inline {
   padding: 12px 0;
 }
-.rc-menu-vertical > .rc-menu-item,
-.rc-menu-vertical-left > .rc-menu-item,
-.rc-menu-vertical-right > .rc-menu-item,
-.rc-menu-inline > .rc-menu-item,
-.rc-menu-vertical > .rc-menu-submenu > .rc-menu-submenu-title,
-.rc-menu-vertical-left > .rc-menu-submenu > .rc-menu-submenu-title,
-.rc-menu-vertical-right > .rc-menu-submenu > .rc-menu-submenu-title,
-.rc-menu-inline > .rc-menu-submenu > .rc-menu-submenu-title {
-  padding: 12px 8px 12px 24px;
-}
 .rc-menu-vertical .rc-menu-submenu-arrow,
 .rc-menu-vertical-left .rc-menu-submenu-arrow,
 .rc-menu-vertical-right .rc-menu-submenu-arrow,
@@ -151,18 +135,11 @@
   text-transform: none;
   text-rendering: auto;
   position: absolute;
-  right: 16px;
   line-height: 1.5em;
-}
-.rc-menu-vertical .rc-menu-submenu-arrow:before,
-.rc-menu-vertical-left .rc-menu-submenu-arrow:before,
-.rc-menu-vertical-right .rc-menu-submenu-arrow:before,
-.rc-menu-inline .rc-menu-submenu-arrow:before {
-  content: "\F0DA";
 }
 .rc-menu-inline .rc-menu-submenu-arrow {
   transform: rotate(90deg);
-  transition: transform .3s;
+  transition: transform 0.3s;
 }
 .rc-menu-inline .rc-menu-submenu-open > .rc-menu-submenu-title .rc-menu-submenu-arrow {
   transform: rotate(-90deg);
@@ -182,11 +159,10 @@
 .rc-menu-sub.rc-menu-inline > .rc-menu-submenu > .rc-menu-submenu-title {
   padding-top: 8px;
   padding-bottom: 8px;
-  padding-right: 0;
 }
 .rc-menu-open-slide-up-enter,
 .rc-menu-open-slide-up-appear {
-  animation-duration: .3s;
+  animation-duration: 0.3s;
   animation-fill-mode: both;
   transform-origin: 0 0;
   opacity: 0;
@@ -194,7 +170,7 @@
   animation-play-state: paused;
 }
 .rc-menu-open-slide-up-leave {
-  animation-duration: .3s;
+  animation-duration: 0.3s;
   animation-fill-mode: both;
   transform-origin: 0 0;
   opacity: 1;
@@ -237,14 +213,14 @@
 .rc-menu-open-zoom-enter,
 .rc-menu-open-zoom-appear {
   opacity: 0;
-  animation-duration: .3s;
+  animation-duration: 0.3s;
   animation-fill-mode: both;
   transform-origin: 0 0;
   animation-timing-function: cubic-bezier(0.08, 0.82, 0.17, 1);
   animation-play-state: paused;
 }
 .rc-menu-open-zoom-leave {
-  animation-duration: .3s;
+  animation-duration: 0.3s;
   animation-fill-mode: both;
   transform-origin: 0 0;
   animation-timing-function: cubic-bezier(0.6, 0.04, 0.98, 0.34);
@@ -276,6 +252,126 @@
   100% {
     opacity: 0;
     transform: scale(0, 0);
+  }
+}
+.a-ltr.rc-menu {
+  padding-left: 0;
+  direction: ltr;
+}
+.a-ltr.rc-menu-item,
+.a-ltr.rc-menu-submenu-title {
+  padding: 7px 7px 7px 16px;
+}
+.a-ltr.rc-menu-submenu-popup .submenu-title-wrapper {
+  padding-right: 20px;
+}
+.a-ltr.rc-menu .rc-menu-submenu-title .anticon,
+.a-ltr.rc-menu .rc-menu-item .anticon {
+  margin-right: 8px;
+}
+.a-ltr.rc-menu-vertical,
+.a-ltr.rc-menu-vertical-left,
+.a-ltr.rc-menu-vertical-right,
+.a-ltr.rc-menu-inline {
+  padding: 12px 0;
+}
+.a-ltr.rc-menu-vertical > .rc-menu-item,
+.a-ltr.rc-menu-vertical-left > .rc-menu-item,
+.a-ltr.rc-menu-vertical-right > .rc-menu-item,
+.a-ltr.rc-menu-inline > .rc-menu-item,
+.a-ltr.rc-menu-vertical > .rc-menu-submenu > .rc-menu-submenu-title,
+.a-ltr.rc-menu-vertical-left > .rc-menu-submenu > .rc-menu-submenu-title,
+.a-ltr.rc-menu-vertical-right > .rc-menu-submenu > .rc-menu-submenu-title,
+.a-ltr.rc-menu-inline > .rc-menu-submenu > .rc-menu-submenu-title {
+  padding: 12px 8px 12px 24px;
+}
+.a-ltr.rc-menu-vertical .rc-menu-submenu-arrow,
+.a-ltr.rc-menu-vertical-left .rc-menu-submenu-arrow,
+.a-ltr.rc-menu-vertical-right .rc-menu-submenu-arrow,
+.a-ltr.rc-menu-inline .rc-menu-submenu-arrow {
+  right: 16px;
+}
+.a-ltr.rc-menu-vertical .rc-menu-submenu-arrow:before,
+.a-ltr.rc-menu-vertical-left .rc-menu-submenu-arrow:before,
+.a-ltr.rc-menu-vertical-right .rc-menu-submenu-arrow:before,
+.a-ltr.rc-menu-inline .rc-menu-submenu-arrow:before {
+  content: "\F0DA";
+}
+.a-ltr .a-ltr .rc-menu-sub.rc-menu-inline > .rc-menu-item,
+.a-ltr .a-ltr .rc-menu-sub.rc-menu-inline > .rc-menu-submenu > .rc-menu-submenu-title {
+  padding-right: 0;
+}
+.a-rtl.rc-menu {
+  padding-right: 0;
+  direction: rtl;
+}
+.a-rtl.rc-menu-item,
+.a-rtl.rc-menu-submenu-title {
+  padding: 7px 16px 7px 7px;
+}
+.a-rtl.rc-menu-submenu-popup .submenu-title-wrapper {
+  padding-left: 20px;
+}
+.a-rtl.rc-menu .rc-menu-submenu-title .anticon,
+.a-rtl.rc-menu .rc-menu-item .anticon {
+  margin-left: 8px;
+}
+.a-rtl.rc-menu-vertical > .rc-menu-item,
+.a-rtl.rc-menu-vertical-left > .rc-menu-item,
+.a-rtl.rc-menu-vertical-right > .rc-menu-item,
+.a-rtl.rc-menu-inline > .rc-menu-item,
+.a-rtl.rc-menu-vertical > .rc-menu-submenu > .rc-menu-submenu-title,
+.a-rtl.rc-menu-vertical-left > .rc-menu-submenu > .rc-menu-submenu-title,
+.a-rtl.rc-menu-vertical-right > .rc-menu-submenu > .rc-menu-submenu-title,
+.a-rtl.rc-menu-inline > .rc-menu-submenu > .rc-menu-submenu-title {
+  padding: 12px 24px 12px 8px;
+}
+.a-rtl.rc-menu-vertical .rc-menu-submenu-arrow,
+.a-rtl.rc-menu-vertical-left .rc-menu-submenu-arrow,
+.a-rtl.rc-menu-vertical-right .rc-menu-submenu-arrow,
+.a-rtl.rc-menu-inline .rc-menu-submenu-arrow {
+  left: 16px;
+}
+.a-rtl.rc-menu-vertical .rc-menu-submenu-arrow:before,
+.a-rtl.rc-menu-vertical-left .rc-menu-submenu-arrow:before,
+.a-rtl.rc-menu-vertical-right .rc-menu-submenu-arrow:before,
+.a-rtl.rc-menu-inline .rc-menu-submenu-arrow:before {
+  content: "\F0D9";
+}
+.a-rtl .a-rtl .rc-menu-sub.rc-menu-inline > .rc-menu-item,
+.a-rtl .a-rtl .rc-menu-sub.rc-menu-inline > .rc-menu-submenu > .rc-menu-submenu-title {
+  padding-left: 0;
+}
+.a-rtl.rc-menu-open-zoom-enter.a-rtl.rc-menu-open-zoom-enter-active,
+.a-rtl.rc-menu-open-zoom-appear.a-rtl.rc-menu-open-zoom-appear-active {
+  animation-name: rtl_rcMenuOpenZoomIn;
+  animation-play-state: running;
+}
+.a-rtl.rc-menu-open-zoom-leave.a-rtl.rc-menu-open-zoom-leave-active {
+  animation-name: rtl_rcMenuOpenZoomOut;
+  animation-play-state: running;
+}
+@keyframes rtl_rcMenuOpenZoomIn {
+  0% {
+    opacity: 0;
+    transform: scale(0, 0);
+    transform-origin: 100% 0%;
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1, 1);
+    transform-origin: 100% 0%;
+  }
+}
+@keyframes rtl_rcMenuOpenZoomOut {
+  0% {
+    transform: scale(1, 1);
+    transform-origin: 100% 0%;
+  }
+  100% {
+    opacity: 0;
+    transform: scale(0, 0);
+    transform-origin: 100% 0%;
   }
 }
 
